feat: create column delete route & add to swagger
